--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+</head>
 <body>
+
+<p>
 <a href="http://validator.w3.org/check/referer"> <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/></a>
+</p>
+
 </body>
+<footer>
+</footer>
 </html>
