--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
+	<meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="author" content="Elly Businge">
+	<title>My Personal Blog</title>
 </head>
 <body>
 
