Added page content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="Elly Businge">
 	<title>My Personal Blog</title>
+	<link type="text/css" rel="shortcut icon" href="images/favicon.ico"/>
 
 	<style>
 		* {
@@ -14,7 +15,7 @@
 		.column {
 		  float: left;
 		  padding: 10px;
-		  height: 100px; 
+		  height: 150px; 
 		}
 		
 		.left {
@@ -30,16 +31,20 @@
 		  display: table;
 		  clear: both;
 		}
+
+		.row {
+			background-color: darkgray;
+		}
 	</style>
 </head>
 <body>
-	<div id="container"> 
+	<div id="container" style="background-color: lightgray;"> 
 		<div id="header" style="background-color: cornflowerblue;"> 
 			<img src="images/elly3.jpg" alt="elly" width="200" height="200" style="border-radius: 50%;"/>
 		</div>
 	
 		<div id="content"> 
-			<h1>ELLY BUSINGE</h1>
+			<h1 style="padding-left: 5px;">ELLY BUSINGE</h1>
 			<ul>
 				<li>Lab01 - Home Page</li>
 				<li>Lab02 - About Me</li>
