Added page content

--- a/index.html
+++ b/index.html
@@ -40,23 +40,24 @@
 <body>
 	<div id="container" style="background-color: lightgray;"> 
 		<div id="header" style="background-color: cornflowerblue;"> 
-			<img src="images/elly3.jpg" alt="elly" width="200" height="200" style="border-radius: 50%;"/>
+			<img src="images/elly3.jpg" alt="elly" width="200" height="200" style="border-radius: 50%; margin-left: 15px;
+			margin-top: 5px;"/>
 		</div>
 	
 		<div id="content"> 
 			<h1 style="padding-left: 5px;">ELLY BUSINGE</h1>
 			<ul>
-				<li>Lab01 - Home Page</li>
-				<li>Lab02 - About Me</li>
-				<li>Lab03 - Recipe</li>
-				<li>Lab04 - Movie Review</li>
-				<li>Lab05</li>
-				<li>Lab06</li>
-				<li>Lab07</li>
-				<li>Lab08</li>
-				<li>Lab09</li>
-				<li>Lab10</li>
-				<li>Final Exam</li>
+				<li><a href="lab01.html">Lab01 - Home Page</a></li>
+				<li><a href="lab02.html">Lab02 - About Me</a></li>
+				<li><a href="lab03.html">Lab03 - Recipe</a></li>
+				<li><a href="lab04.html">Lab04 - Movie Review</a></li>
+				<li><a href="lab05.html">Lab05</a></li>
+				<li><a href="lab06.html">Lab06</a></li>
+				<li><a href="lab07.html">Lab07</a></li>
+				<li><a href="lab08.html">Lab08</a></li>
+				<li><a href="lab09.html">Lab09</a></li>
+				<li><a href="lab10.html">Lab10</a></li>
+				<li><a href="final.html">Final Exam</a></li>
 			</ul>
 		</div>
 		<div id="footer" class="row"> 
@@ -67,7 +68,7 @@
 				Email: ebusinge@miu.edu
 			</div>
 			<div class="column right" id="right"> 
-				<p>
+				<p style="float: right;">
 					<a href="http://validator.w3.org/check/referer"> 
 						<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 					</a>
