--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class="column right" id="right"> 
 				<p style="float: right;">
-					<a href="http://validator.w3.org/check/referer"> 
+					<a href="https://validator.w3.org/nu/"> 
 						<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 					</a>
 				</p>
