--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		<div id="footer" class="row"> 
 			<div class="column left" id="left">  
 				<h3>Elly Businge</h3>
-				Maharishi International University</br>
-				Address: 1000 N 4th St., Fairfield, Iowa, 52557</br>
+				Maharishi International University<br/>
+				Address: 1000 N 4th St., Fairfield, Iowa, 52557<br/>
 				Email: ebusinge@miu.edu
 			</div>
 			<div class="column right" id="right"> 
