--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<img src="images/elly3.jpg" alt="elly" width="200" height="200" style="border-radius: 50%; margin-left: 15px;
 			margin-top: 5px;"/>
 		</div>
-	
+
 		<div id="content"> 
 			<h1 style="padding-left: 5px;">ELLY BUSINGE</h1>
 			<ul>
@@ -69,9 +69,13 @@
 			</div>
 			<div class="column right" id="right"> 
 				<p style="float: right;">
-					<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fellybusinge.github.io%2F"> 
-						<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-					</a>
+					<!--<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fellybusinge.github.io%2F"> 
+						<img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+					</a>-->
+
+					<a href="https://validator.w3.org/check/referer"> 
+						<img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
+					</a>						</a>
 				</p>
 			</div>
 		</div>
