--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 					</a>-->
 
 					<a href="https://validator.w3.org/check/referer"> 
-						<img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
-					</a>						</a>
+						<img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							
+					</a>
 				</p>
 			</div>
 		</div>
