--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<img src="https://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 					</a>-->
 
-					<a href="http://validator.w3.org/check/referer"> 
+					<a href="https://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
 						<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							
 					</a>
 				</p>
