--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<div id="content"> 
 			<h1 style="padding-left: 5px;">ELLY BUSINGE</h1>
 			<ul>
-				<li><a href="lab01.html">Lab01 - Home Page</a></li>
-				<li><a href="lab02.html">Lab02 - About Me</a></li>
+				<li><a href="index.html">Lab01 - Home Page</a></li>
+				<li><a href="aboutme.html">Lab02 - About Me</a></li>
 				<li><a href="lab03.html">Lab03 - Recipe</a></li>
 				<li><a href="lab04.html">Lab04 - Movie Review</a></li>
 				<li><a href="lab05.html">Lab05</a></li>
