--- a/aboutme.html
+++ b/aboutme.html
@@ -38,16 +38,25 @@
 			</section>
 			<section>
 				<h2>My Moods</h2> 
-				<div class="column">
+				<div class="left">
 					<span>Happy:</span>
 					<img src="images/happy-mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 
-				<div class="column">
+				<div class="right">
 					<span>Sad:</span>
 					<img src="images/sad_mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 			</section>
+			
+			<!--<section>
+				<h2>Fun Facts About My Neighbours</h2> 
+				<ul>
+					<li>Micheal - Always snoring at night</li>
+					<li>John - Ever smiling</li>
+					<li>James - Always in a state of confusion</li>
+				</ul>
+			</section>-->
 		</div>
 	</main> 
 	<footer>
@@ -58,12 +67,18 @@
 				Email: ebusinge@miu.edu
 		</div>
 		<div class="column right" id="right"> 
-			<p style="float: right;">
+			<span style="float: right;">
 				<a href="https://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
 					<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							
 				</a>
-			</p>
-		</div>-->
+			</span>
+
+			<!--<span style="float: right;">
+				<a href="http://jigsaw.w3.org/css-validator/validator">
+					<img src="http://jigsaw.w3.org/css validator/images/vcss" alt="Valid CSS!"/>
+				</a>
+			</span>-->
+		</div>
 	</footer>
 </body>
 </html>
