--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<header>
-		<h1>About Elly Businge</h1>
-		<p>My Names are Elly Businge. I come from a tiny East African nation called Uganda. </p>
+		<h1 class="textColor">About Elly Businge</h1>
+		<p>My Names are <b>Elly Businge</b>. I come from a tiny East African nation called <b>Uganda</b>. </p>
 	</header> 
 	<hr/>
 	<main>
 		<div id="container">
 			<section>
-				<h2>My Classes This Quarter</h2> 
+				<h2 class="textColor">My Classes This Quarter</h2> 
 				<ul>
 					<li>CS401 - Modern Programming Practices</li>
 					<li>CS525 - Advanced Software Development</li>
@@ -27,7 +27,8 @@
 				</ul>
 			</section>
 			<section>
-				<h2>My Favourite Movies</h2> 
+				<h2 class="textColor">My Favourite Movies</h2> 
+				<p class="italic">BTW i love these movies to the extent that i have watched them over the years !!!</p>
 				<ol>
 					<li>Gods Must Be Crazy (<a href="">IMDB</a>)</li>
 					<li>My Best Friends Wedding (<a href="">IMDB</a>)</li>
@@ -37,20 +38,20 @@
 				</ol>
 			</section>
 			<section>
-				<h2>My Moods</h2> 
+				<h2 class="textColor">My Moods</h2> 
 				<div class="left">
-					<span>Happy:</span>
+					<span class="moods">Happy:</span>
 					<img src="images/happy-mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 
 				<div class="right">
-					<span>Sad:</span>
+					<span class="moods">Sad:</span>
 					<img src="images/sad_mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 			</section>
 			
 			<!--<section>
-				<h2>Fun Facts About My Neighbours</h2> 
+				<h2 class="textColor">Fun Facts About My Neighbours</h2> 
 				<ul>
 					<li>Micheal - Always snoring at night</li>
 					<li>John - Ever smiling</li>
