--- a/aboutme.html
+++ b/aboutme.html
@@ -40,12 +40,12 @@
 			<section>
 				<h2 class="textColor">My Moods</h2> 
 				<div class="left">
-					<span class="moods">Happy:</span>
+					<span class="thick">Happy:</span>
 					<img src="images/happy-mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 
 				<div class="right">
-					<span class="moods">Sad:</span>
+					<span class="thick">Sad:</span>
 					<img src="images/sad_mood.jpg" alt="elly" width="500" height="500"/>
 				</div>
 			</section>
@@ -69,16 +69,16 @@
 		</div>
 		<div class="column right" id="right"> 
 			<span style="float: right;">
+				<a href="http://jigsaw.w3.org/css-validator/validator">
+					<img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="CSS validation"/>
+				</a>
+			</span>
+
+			<span style="float: right;">
 				<a href="https://validator.w3.org/check/referer" rel="nofollow" title="Validate as HTML5">
 					<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>							
 				</a>
 			</span>
-
-			<!--<span style="float: right;">
-				<a href="http://jigsaw.w3.org/css-validator/validator">
-					<img src="http://jigsaw.w3.org/css validator/images/vcss" alt="Valid CSS!"/>
-				</a>
-			</span>-->
 		</div>
 	</footer>
 </body>
