--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -69,7 +69,7 @@
 		</div>
 		<div class="column right" id="right"> 
 			<span style="float: right;">
-				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<a href="https://jigsaw.w3.org/css-validator/check/referer">
 					<img src="http://mumstudents.org/cs472/2013-09/images/w3c-css.png" alt="CSS validation"/>
 				</a>
 			</span>
