--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -37,27 +37,27 @@
 					<li>Pirates Of The Caribbean (<a href="">IMDB</a>)</li>
 				</ol>
 			</section>
-			<section>
+			<section class="my-mood">
 				<h2 class="thick">My Moods</h2> 
-				<div class="left">
+				<article class="left">
 					<span class="thick">Happy:</span>
 					<img src="images/happy-mood.jpg" alt="elly" width="500" height="500"/>
-				</div>
+				</article>
 
-				<div class="right">
+				<article class="right">
 					<span class="thick">Sad:</span>
 					<img src="images/sad_mood.jpg" alt="elly" width="500" height="500"/>
-				</div>
+				</article>
 			</section>
 			
-			<!--<section>
-				<h2 class="textColor">Fun Facts About My Neighbours</h2> 
+			<section>
+				<h2 class="thick">Fun Facts About My Neighbours</h2> 
 				<ul>
-					<li>Micheal - Always snoring at night</li>
-					<li>John - Ever smiling</li>
-					<li>James - Always in a state of confusion</li>
+					<li>Micheal - Always <span class="italic">snoring</span> at night</li>
+					<li>John - Ever <span class="italic">smiling</span></li>
+					<li>James - Always in a state of <span class="italic">confusion</span></li>
 				</ul>
-			</section>-->
+			</section>
 		</div>
 	</main> 
 	<footer>
