--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -32,7 +32,7 @@
 				<ol>
 					<li>Gods Must Be Crazy (<a href="">IMDB</a>)</li>
 					<li>My Best Friends Wedding (<a href="">IMDB</a>)</li>
-					<li>Coming To America (Favourite movie of all time) (<a href="">IMDB</a>)</li>
+					<li>Coming To America (Favourite movie of all time) (<a href="https://www.imdb.com/title/tt0094898/mediaviewer/rm2778142208">IMDB</a>)</li>
 					<li>Not Without My Daughter (<a href="">IMDB</a>)</li>
 					<li>Pirates Of The Caribbean (<a href="">IMDB</a>)</li>
 				</ol>
@@ -56,6 +56,17 @@
 					<li>Micheal - Always <span class="italic">snoring</span> at night</li>
 					<li>John - Ever <span class="italic">smiling</span></li>
 					<li>James - Always in a state of <span class="italic">confusion</span></li>
+				</ul>
+			</section>
+
+			<section>
+				<h2 class="thick">Favorite Sport</h2> 
+				<ul>
+					<li>Football</li>
+					<li>Cycling</li>
+					<li>Tennis</li>
+					<li>Basketball</li>
+					<li>Baseball</li>
 				</ul>
 			</section>
 		</div>
