--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -30,11 +30,56 @@
 				<h2 class="thick">My Favourite Movies</h2> 
 				<p class="italic">BTW i love these movies to the extent that i have watched them over the years !!!</p>
 				<ol>
-					<li>Gods Must Be Crazy (<a href="">IMDB</a>)</li>
-					<li>My Best Friends Wedding (<a href="">IMDB</a>)</li>
-					<li>Coming To America (Favourite movie of all time) (<a href="https://www.imdb.com/title/tt0094898/mediaviewer/rm2778142208">IMDB</a>)</li>
-					<li>Not Without My Daughter (<a href="">IMDB</a>)</li>
-					<li>Pirates Of The Caribbean (<a href="">IMDB</a>)</li>
+					<li>Gods Must Be Crazy (<a href="https://www.imdb.com/title/tt0080801/?ref_=nv_sr_srsg_0">IMDB</a>)
+						<dl>
+							<dt>Genre</dt>
+  							<dd>Adventure | Comedy</dd>
+  							<dt>Language</dt>
+							<dd>English</dd>
+							<dt>Year</dt>
+  							<dd>1980</dd>
+						</dl>
+					</li>
+					<li>My Best Friends Wedding (<a href="https://www.imdb.com/title/tt0119738/?ref_=nv_sr_srsg_0">IMDB</a>)
+						<dl>
+							<dt>Genre</dt>
+  							<dd>Comedy | Drama | Romance</dd>
+  							<dt>Language</dt>
+							<dd>English</dd>
+							<dt>Year</dt>
+  							<dd>1997</dd>
+						</dl>
+					</li>
+					<li>Coming To America (Favourite movie of all time) (<a href="https://www.imdb.com/title/tt0094898/mediaviewer/rm2778142208">IMDB</a>)
+						<dl>
+							<dt>Genre</dt>
+  							<dd>Romantic Comedy</dd>
+  							<dt>Language</dt>
+							<dd>English</dd>
+							<dt>Year</dt>
+  							<dd>1988</dd>
+						</dl>
+					</li>
+					<li>Not Without My Daughter (<a href="https://www.imdb.com/title/tt0102555/?ref_=fn_al_tt_1">IMDB</a>)
+						<dl>
+							<dt>Genre</dt>
+  							<dd>Drama | Thriller</dd>
+  							<dt>Language</dt>
+							<dd>English</dd>
+							<dt>Year</dt>
+  							<dd>1991</dd>
+						</dl>
+					</li>
+					<li>Pirates Of The Caribbean (<a href="https://www.imdb.com/title/tt0325980/?ref_=nv_sr_srsg_0">IMDB</a>)
+						<dl>
+							<dt>Genre</dt>
+  							<dd>Action | Adventure | Fantasy</dd>
+  							<dt>Language</dt>
+							<dd>English</dd>
+							<dt>Year</dt>
+  							<dd>2003</dd>
+						</dl>
+					</li>
 				</ol>
 			</section>
 			<section class="my-mood">
