--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -29,7 +29,7 @@
 			<section>
 				<h2 class="thick">My Favourite Movies</h2> 
 				<p class="italic">BTW i love these movies to the extent that i have watched them over the years !!!</p>
-				<ol>
+				<ol class="column-reverse">
 					<li>Gods Must Be Crazy (<a href="https://www.imdb.com/title/tt0080801/?ref_=nv_sr_srsg_0">IMDB</a>)
 						<dl>
 							<dt>Genre</dt>
@@ -101,17 +101,6 @@
 					<li>Micheal - Always <span class="italic">snoring</span> at night</li>
 					<li>John - Ever <span class="italic">smiling</span></li>
 					<li>James - Always in a state of <span class="italic">confusion</span></li>
-				</ul>
-			</section>
-
-			<section>
-				<h2 class="thick">Favorite Sport</h2> 
-				<ul>
-					<li>Football</li>
-					<li>Cycling</li>
-					<li>Tennis</li>
-					<li>Basketball</li>
-					<li>Baseball</li>
 				</ul>
 			</section>
 		</div>
