--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<ul>
 				<li><a href="index.html">Lab01 - Home Page</a></li>
 				<li><a href="lab2/aboutme.html">Lab02 - About Me</a></li>
-				<li><a href="lab03.html">Lab03 - Recipe</a></li>
+				<li><a href="lab2/recipe.html">Lab02 - Recipe</a></li>
 				<li><a href="lab04.html">Lab04 - Movie Review</a></li>
 				<li><a href="lab05.html">Lab05</a></li>
 				<li><a href="lab06.html">Lab06</a></li>
