--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -12,17 +12,55 @@
 <body cz-shortcut-listen="true">
 	<div>
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
+		<h1 class="header_txt">TMNT (2007)</h1>
 	</div>
-
-	<h1>TMNT (2007)</h1>
 
 	<div class="container">
 		<img class="banner_img" src="images/rbg.png" alt="Banner Img">
 		<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
 
 		<div class="left_div">
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Peter Debruge <br>
+					Variety
+				</p>
+			</div>
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+		</div>
+
+		<!--<div class="left_div">	
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+		</div>-->
+
+		<div class="right_div">
 			<div>
-				<img src="images/overview.png" alt="general overview">
+				<img class="right_div" src="images/overview.png" alt="general overview">
 			</div>
 
 			<dl>
@@ -75,34 +113,7 @@
 			33%
 		</div>
 		
-		<p>
-			<img src="images/rotten.gif" alt="Rotten">
-			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-		</p>
-		<p>
-			<img src="images/critic.gif" alt="Critic">
-			Peter Debruge <br>
-			Variety
-		</p>
-
-		<p>
-			<img src="images/fresh.gif" alt="Fresh">
-			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-		</p>
-		<p>
-			<img src="images/critic.gif" alt="Critic">
-			Todd Gilchrist <br>
-			IGN Movies
-		</p>
-
-		<p>
-			<img src="images/rotten.gif" alt="Rotten">
-			<q>It stinks!</q>
-		</p>
-		<p>
-			<img src="images/critic.gif" alt="Critic">
-			Jay Sherman (unemployed)
-		</p>
+		
 
 		<p>
 			<img src="images/rotten.gif" alt="Rotten">
