--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -12,7 +12,9 @@
 <body cz-shortcut-listen="true">
 	<div>
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
-		<h1 class="header_txt">TMNT (2007)</h1>
+		<div class="div_h1">
+			<h1 class="header_txt">TMNT (2007)</h1>
+		</div>
 	</div>
 
 	<div class="container">
@@ -60,7 +62,7 @@
 
 		<div class="right_div">
 			<div>
-				<img class="right_div" src="images/overview.png" alt="general overview">
+				<img class="right_img_div" src="images/overview.png" alt="general overview">
 			</div>
 
 			<dl>
@@ -106,7 +108,6 @@
 				</dd>
 			</dl>
 		</div>
-
 	</div>
 	<!--<div>
 			<img src="images/rottenbig.png" alt="Rotten">
