--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -11,15 +11,17 @@
 
 <body cz-shortcut-listen="true">
 	<div>
+		<img class="banner_top_img" src="images/bannerbg.png" alt="Banner Img">
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
-		<div class="div_h1">
+		<!--<div class="div_h1">
 			<h1 class="header_txt">TMNT (2007)</h1>
-		</div>
+		</div>-->
 	</div>
 
 	<div class="container">
 		<img class="banner_img" src="images/rbg.png" alt="Banner Img">
 		<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
+		<!--<span>33%</span>-->
 
 		<div class="left_div">
 			<div class="left_div_item">
@@ -187,11 +189,11 @@
 		</p>
 
 		<p>(1-10) of 88</p>
-	</div>
+	</div>-->
 		<div>
 			<a class="validator" href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png" alt="Valid HTML5"></a> <br>
 			<a class="validator" href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png" alt="Valid CSS"></a>
-		</div>-->
+		</div>
 </body>
 
 </html>
