--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<li><a href="index.html">Lab01 - Home Page</a></li>
 				<li><a href="lab2/aboutme.html">Lab02 - About Me</a></li>
 				<li><a href="lab2/recipe.html">Lab02 - Recipe</a></li>
-				<li><a href="lab04.html">Lab04 - Movie Review</a></li>
+				<li><a href="lab3/tmnt.html">Lab03 - Movie Review</a></li>
 				<li><a href="lab05.html">Lab05</a></li>
 				<li><a href="lab06.html">Lab06</a></li>
 				<li><a href="lab07.html">Lab07</a></li>
