--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -13,9 +13,9 @@
 	<div>
 		<img class="banner_top_img" src="images/bannerbg.png" alt="Banner Img">
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
-		<!--<div class="div_h1">
+		<div class="div_h1">
 			<h1 class="header_txt">TMNT (2007)</h1>
-		</div>-->
+		</div>
 	</div>
 
 	<div class="container">
