--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 
-		<!--<div class="left_div">	
+		<div class="left_div">	
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
@@ -60,7 +60,45 @@
 					New York Times
 				</p>
 			</div>
-		</div>-->
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+		</div>
+
+		<div class="left_div">	
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+		</div>
 
 		<div class="right_div">
 			<div>
