--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -51,8 +51,8 @@
 		<div class="left_div">	
 			<div class="left_div_item">
 				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
@@ -64,7 +64,7 @@
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
-					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+					<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
@@ -78,7 +78,7 @@
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
-					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+					<q>It stinks</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
@@ -89,13 +89,65 @@
 
 			<div class="left_div_item">
 				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
 					Jeannette Catsoulis <br>
 					New York Times
+				</p>
+			</div>
+		</div>
+
+		<div class="left_div">	
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					Jeannette Catsoulis <br>
+					New York Times
+				</p>
+			</div>
+		</div>
+
+		<div class="left_div">	
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/rotten.gif" alt="Rotten">
+					<q>YOUR REVIEW HERE</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					NAME <br>
+					PUBLICATION
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>YOUR REVIEW HERE</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					NAME <br>
+					PUBLICATION
 				</p>
 			</div>
 		</div>
