--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -20,195 +20,205 @@
 	<div class="container">
 		<img class="banner_img" src="images/rbg.png" alt="Banner Img">
 		<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
-		<span>33%</span>
+		<!--<span class="rating_text">33%</span>-->
 
-		<div class="right_div">
-			<div>
-				<img class="right_img_div" src="images/overview.png" alt="general overview">
-			</div>
-			<div>
-				<dl>
-					<dt>STARRING</dt>
-					<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
+		<div class="right_div_container">
+			<div class="right_div">
+				<div>
+					<img class="right_img_div" src="images/overview.png" alt="general overview">
+				</div>
+				<div>
+					<dl>
+						<dt>STARRING</dt>
+						<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
 
-					<dt>DIRECTOR</dt>
-					<dd>Kevin Munroe</dd>
+						<dt>DIRECTOR</dt>
+						<dd>Kevin Munroe</dd>
 
-					<dt>RATING</dt>
-					<dd>PG</dd>
+						<dt>RATING</dt>
+						<dd>PG</dd>
 
-					<dt>THEATRICAL RELEASE</dt>
-					<dd>Mar 23, 2007</dd>
+						<dt>THEATRICAL RELEASE</dt>
+						<dd>Mar 23, 2007</dd>
 
-					<dt>MOVIE SYNOPSIS</dt>
-					<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a
-						family.
-					</dd>
+						<dt>MOVIE SYNOPSIS</dt>
+						<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a
+							family.
+						</dd>
 
-					<dt>MPAA RATING</dt>
-					<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+						<dt>MPAA RATING</dt>
+						<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
 
-					<dt>RELEASE COMPANY</dt>
-					<dd>Warner Bros.</dd>
+						<dt>RELEASE COMPANY</dt>
+						<dd>Warner Bros.</dd>
 
-					<dt>RUNTIME</dt>
-					<dd>90 mins</dd>
+						<dt>RUNTIME</dt>
+						<dd>90 mins</dd>
 
-					<dt>GENRE</dt>
-					<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters
-					</dd>
+						<dt>GENRE</dt>
+						<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated
+							Characters
+						</dd>
 
-					<dt>BOX OFFICE</dt>
-					<dd>$54,132,596</dd>
+						<dt>BOX OFFICE</dt>
+						<dd>$54,132,596</dd>
 
-					<dt>LINKS</dt>
-					<dd>
-						<ul>
-							<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-							<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a>
-							</li>
-							<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-							<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-						</ul>
-					</dd>
-				</dl>
-			</div>
-		</div>
-
-		<div class="left_div">
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the
-						movie attempts to look polished and 'cool,' but the been-there animation can't compete with the
-						then-cutting-edge puppetry of the 1990 live-action movie.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Peter Debruge <br>
-					Variety
-				</p>
-			</div>
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their
-						countercultural roots, our superheroes on the half shell have been firmly co-opted by the
-						industry their creators once sought to spoof.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Jeannette Catsoulis <br>
-					New York Times
-				</p>
+						<dt>LINKS</dt>
+						<dd>
+							<ul>
+								<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+								<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT
+										Review</a>
+								</li>
+								<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+								<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+							</ul>
+						</dd>
+					</dl>
+				</div>
 			</div>
 		</div>
-
-		<div class="left_div">
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/fresh.gif" alt="Rotten">
-					<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of
-						new ones.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Todd Gilchrist <br>
-					IGN Movies
-				</p>
+		<div class="left_div_container">
+			<div class="left_div">
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness,
+							the
+							movie attempts to look polished and 'cool,' but the been-there animation can't compete with
+							the
+							then-cutting-edge puppetry of the 1990 live-action movie.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Peter Debruge <br>
+						Variety
+					</p>
+				</div>
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their
+							countercultural roots, our superheroes on the half shell have been firmly co-opted by the
+							industry their creators once sought to spoof.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Jeannette Catsoulis <br>
+						New York Times
+					</p>
+				</div>
 			</div>
 
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
-						filmmakers went along.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Ed Gonzalez <br>
-					Slant Magazine
-				</p>
-			</div>
-		</div>
+			<div class="left_div">
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/fresh.gif" alt="Rotten">
+						<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion
+							of
+							new ones.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Todd Gilchrist <br>
+						IGN Movies
+					</p>
+				</div>
 
-		<div class="left_div">
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>It stinks</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Jay Sherman (unemployed)
-				</p>
-			</div>
-
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/fresh.gif" alt="Rotten">
-					<q>The striking use of image and motion allows each sequence to leave an impression. It's an
-						accomplished restart to this franchise.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Mark Palermo <br>
-					Coast (Halifax, Nova Scotia)
-				</p>
-			</div>
-		</div>
-
-		<div class="left_div">
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't
-						stopped them from becoming dull.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Joshua Tyler <br>
-					CinemaBlend.com
-				</p>
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the
+							filmmakers went along.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Ed Gonzalez <br>
+						Slant Magazine
+					</p>
+				</div>
 			</div>
 
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/fresh.gif" alt="Rotten">
-					<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy
-						charm of the three live action films.</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					Steve Rhodes <br>
-					Internet Reviews
-				</p>
-			</div>
-		</div>
+			<div class="left_div">
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>It stinks</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Jay Sherman (unemployed)
+					</p>
+				</div>
 
-		<div class="left_div">
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/rotten.gif" alt="Rotten">
-					<q>YOUR REVIEW HERE</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					NAME <br>
-					PUBLICATION
-				</p>
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/fresh.gif" alt="Rotten">
+						<q>The striking use of image and motion allows each sequence to leave an impression. It's an
+							accomplished restart to this franchise.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Mark Palermo <br>
+						Coast (Halifax, Nova Scotia)
+					</p>
+				</div>
 			</div>
 
-			<div class="left_div_item">
-				<p class="thick">
-					<img src="images/fresh.gif" alt="Rotten">
-					<q>YOUR REVIEW HERE</q>
-				</p>
-				<p>
-					<img src="images/critic.gif" alt="Critic">
-					NAME <br>
-					PUBLICATION
-				</p>
+			<div class="left_div">
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>The rubber suits are gone and they've been redone with fancy computer technology, but that
+							hasn't
+							stopped them from becoming dull.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Joshua Tyler <br>
+						CinemaBlend.com
+					</p>
+				</div>
+
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/fresh.gif" alt="Rotten">
+						<q>The script feels like it was computer generated. This mechanical presentation lacks the
+							cheesy
+							charm of the three live action films.</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						Steve Rhodes <br>
+						Internet Reviews
+					</p>
+				</div>
+			</div>
+
+			<div class="left_div">
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/rotten.gif" alt="Rotten">
+						<q>YOUR REVIEW HERE</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						NAME <br>
+						PUBLICATION
+					</p>
+				</div>
+
+				<div class="left_div_item">
+					<p class="thick">
+						<img src="images/fresh.gif" alt="Rotten">
+						<q>YOUR REVIEW HERE</q>
+					</p>
+					<p>
+						<img src="images/critic.gif" alt="Critic">
+						NAME <br>
+						PUBLICATION
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -219,4 +229,5 @@
 				alt="Valid CSS"></a>
 	</div>
 </body>
+
 </html>
