--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -12,9 +12,7 @@
 <body cz-shortcut-listen="true">
 	<div class="div_top_img">
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
-		<div class="div_h1">
-			<h1 class="header_txt">TMNT (2007)</h1>
-		</div>
+		<h1 class="header_txt">TMNT (2007)</h1>
 	</div>
 
 	<div class="container">
@@ -199,7 +197,7 @@
 				<div class="left_div_item">
 					<p class="thick">
 						<img src="images/rotten.gif" alt="Rotten">
-						<q>YOUR REVIEW HERE</q>
+						<q>Faced challenge with getting some of layouts done but all in all i can say that happy</q>
 					</p>
 					<p>
 						<img src="images/critic.gif" alt="Critic">
