--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -16,9 +16,10 @@
 	</div>
 
 	<div class="container">
-		<img class="banner_img" src="images/rbg.png" alt="Banner Img">
-		<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
-		<!--<span class="rating_text">33%</span>-->
+		<div class="banner_img_div">
+			<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
+			<span>33%</span>
+		</div>
 
 		<div class="right_div">
 			<img class="right_img_div" src="images/overview.png" alt="general overview">
@@ -212,8 +213,9 @@
 				</p>
 			</div>
 		</div>
+		<p class="lower_div">(1-10) of 88</p>
 	</div>
-	<p>(1-10) of 88</p>
+	
 	<div class="validator_div">
 		<a class="validator" href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png"
 				alt="Valid HTML5"></a> <br>
