--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -10,15 +10,15 @@
 </head>
 
 <body cz-shortcut-listen="true">
-	<div class="div_top_img">
+	<header class="div_top_img">
 		<img class="header_img" src="images/banner.png" alt="Rancid Tomatoes">
 		<h1 class="header_txt">TMNT (2007)</h1>
-	</div>
+	</header>
 
-	<div class="container">
+	<main class="container">
 		<div class="banner_img_div">
 			<img class="inner_img" src="images/rottenbig.png" alt="Top Img">
-			<span>33%</span>
+			<span class="rating_text">33%</span>
 		</div>
 
 		<div class="right_div">
@@ -101,9 +101,7 @@
 					New York Times
 				</p>
 			</div>
-		</div>
 
-		<div class="left_div">
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/fresh.gif" alt="Rotten">
@@ -130,9 +128,7 @@
 					Slant Magazine
 				</p>
 			</div>
-		</div>
 
-		<div class="left_div">
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
@@ -156,9 +152,7 @@
 					Coast (Halifax, Nova Scotia)
 				</p>
 			</div>
-		</div>
 
-		<div class="left_div">
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
@@ -186,42 +180,64 @@
 					Internet Reviews
 				</p>
 			</div>
-		</div>
 
-		<div class="left_div">
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/rotten.gif" alt="Rotten">
-					<q>Faced challenge with getting some of layouts done but all in all i can say that happy</q>
+					<q>Biggest challenge was that i lost all my changes after clearing the git stash accidentally. </q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
-					NAME <br>
-					PUBLICATION
+					ELLY <br>
+					BUSINGE
 				</p>
 			</div>
 
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/fresh.gif" alt="Rotten">
-					<q>YOUR REVIEW HERE</q>
+					<q>I have faced a challenge of making some of UI dynamic components dynamic when the window is minimised.</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
-					NAME <br>
-					PUBLICATION
+					ELLY <br>
+					BUSINGE
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>I have learnt about the Grid system in CSS and how it can be used to achieve what would have been done using a table</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					ELLY <br>
+					BUSINGE
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>I have got a clear understanding of what it means to use position attributes such as absolute, relative, the z-index property and others.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					ELLY <br>
+					BUSINGE
 				</p>
 			</div>
 		</div>
 		<p class="lower_div">(1-10) of 88</p>
-	</div>
+	</main>
 	
-	<div class="validator_div">
+	<footer class="validator_div">
 		<a class="validator" href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png"
 				alt="Valid HTML5"></a> <br>
 		<a class="validator" href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png"
 				alt="Valid CSS"></a>
-	</div>
+	</footer>
 </body>
 
 </html>
