--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -220,7 +220,21 @@
 			<div class="left_div_item">
 				<p class="thick">
 					<img src="images/fresh.gif" alt="Rotten">
-					<q>I have got a clear understanding of what it means to use position attributes such as absolute, relative, the z-index property and others.</q>
+					<q>I have got a clear understanding of how to use the position attribute values such as absolute, relative, the z-index property and others.</q>
+				</p>
+				<p>
+					<img src="images/critic.gif" alt="Critic">
+					ELLY <br>
+					BUSINGE
+				</p>
+			</div>
+
+			<div class="left_div_item">
+				<p class="thick">
+					<img src="images/fresh.gif" alt="Rotten">
+					<q>I have also learnt what !important in CSS means when it comes to what CSS property needs
+						should be applied to an element
+					</q>
 				</p>
 				<p>
 					<img src="images/critic.gif" alt="Critic">
@@ -232,12 +246,12 @@
 		<p class="lower_div">(1-10) of 88</p>
 	</main>
 	
-	<footer class="validator_div">
+	<div class="validator_div">
 		<a class="validator" href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png"
 				alt="Valid HTML5"></a> <br>
 		<a class="validator" href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png"
 				alt="Valid CSS"></a>
-	</footer>
+	</div>
 </body>
 
 </html>
