--- a/lab3/tmnt.html
+++ b/lab3/tmnt.html
@@ -243,7 +243,7 @@
 				</p>
 			</div>
 		</div>
-		<p class="lower_div">(1-10) of 88</p>
+		<p class="lower_item">(1-10) of 88</p>
 	</main>
 	
 	<div class="validator_div">
