--- a/lab4/supplier.html
+++ b/lab4/supplier.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item active">
-            <a class="nav-link" href="login.html">Suppliers</a>
+            <a class="nav-link" href="#">Suppliers</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -53,11 +53,12 @@
 
   <main role="main" class="flex-shrink-0">
     <div class="container login">
-        <form class="needs-validation">
+        <form method="GET" action="#">
           <div class="row">
             <div class="col-md-12 mb-12 mt-5">
               <label for="emailAddress">Email Address</label>
-              <input type="text" class="form-control" id="emailAddress" placeholder="Enter Email" value="" required="">
+              <input type="text" class="form-control" id="emailAddress" placeholder="Enter Email" value="" title="Expected format xxxx@xxx.edu"
+              required pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$">
               <span>We'll never share your email with anyone else.</span>
             </div>
           </div>
@@ -65,26 +66,24 @@
           <div class="row">
             <div class="col-md-12 mb-12 mt-5">
               <label for="webiste">Website URL</label>
-              <input type="text" class="form-control" id="firstName" placeholder="Enter Website URL" value="" required="">
+              <input type="text" class="form-control" id="firstName" placeholder="Enter Website URL" value="" 
+              required pattern="https?://.+" title="URL must start with http:// or https://">
             </div>
           </div>
 
           <div class="row">
             <div class="col-md-12 mb-12 mt-5">
               <label for="lastName">Password</label>
-              <input type="password" class="form-control" id="password" pattern="(?=\d+)(?=[a-z]*)(?=[A-Z]*).{10,}" placeholder="Password" value="" 
-              required="" title="Password must be atleast 10 characters and contains at least one number, one uppercase and lowercase letter">
+              <input type="password" class="form-control" id="password" pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{10,}$" placeholder="Password" value="" 
+              required title="Password must be atleast 10 characters and contains at least one number, one uppercase and lowercase letter.">
 
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="checkout">
                 <label class="custom-control-label" for="same-address">Check Me Out</label>
               </div>
-              <!-- <div class="invalid-feedback">
-                Valid quantity value is required.
-              </div> -->
             </div>
           </div>
-          <button type="button" class="btn btn-primary login_btn">Submit</button>
+          <input class="btn btn-primary login_btn" type="submit" value="Submit">
         </form>
     </div>
   </main>
