--- a/lab4/product.html
+++ b/lab4/product.html
@@ -54,69 +54,57 @@
   <main role="main" class="flex-shrink-0">
     <div class="container">
       <h3 class="mt-5">New Product Form</h3>
-      <form class="needs-validation" novalidate="">
+      <form method="GET" action="#">
         <div class="row">
           <div class="col-md-6 mb-3">
-            <label for="firstName">Product Number</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
-            <div class="invalid-feedback">
-              Valid product number is required.
-            </div>
+            <label for="productNumber">Product Number</label>
+            <input type="number" class="form-control" id="productNumber" placeholder="Product Number" value="" 
+            title="Only digits allowed in product number" required pattern="\d+">
           </div>
           <div class="col-md-6 mb-3">
-            <label for="lastName">Quantity In Stock</label>
-            <input type="number" class="form-control" id="lastName" placeholder="" value="0" required="">
-            <div class="invalid-feedback">
-              Valid quantity value is required.
-            </div>
+            <label for="quantity">Quantity In Stock</label>
+            <input type="number" class="form-control" id="quantity" placeholder="Quantity In Stock" 
+            title="Only digits allowed as quantity" value="0" required pattern="\d+">
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 mb-3">
-            <label for="firstName">Name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
-            <div class="invalid-feedback">
-              Valid name is required.
-            </div>
+            <label for="productName">Name</label>
+            <input type="text" class="form-control" id="productName" placeholder="Product Name" value="" 
+            title="Incorrect input value" pattern="\D+" required>
           </div>
 
           <div class="col-md-6 mb-3">
-            <label for="country">Supplier</label>
-            <select class="custom-select d-block w-100" id="country" required="">
+            <label for="supplier">Supplier</label>
+            <select class="custom-select d-block w-100" id="supplier" required>
               <option value="">Select a supplier</option>
               <option>John</option>
               <option>James</option>
               <option>Elly</option>
             </select>
-            <div class="invalid-feedback">
-              Please select a valid option.
-            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="unitPrice">Unit Price</label>
-            <input type="number" class="form-control" id="unitPrice" placeholder="" value="0.0" required="">
-            <div class="invalid-feedback">
-              Valid unit value is required.
-            </div>
+            <input type="number" class="form-control" id="unitPrice" placeholder="" value="0.0" 
+            title="Only digits allowed as unit price" required pattern="^[-+]?[0-9]*\.?[0-9]+$">
           </div>
           <div class="col-md-6 mb-3">
             <label for="supplyDate">Date Supplied</label>
-            <input type="text" class="form-control" id="supplyDate" placeholder="yyyy-mm-dd" value="" required="">
-            <div class="invalid-feedback">
-              Valid date is required.
-            </div>
+            <input type="text" class="form-control" id="supplyDate" placeholder="yyyy-mm-dd" 
+            title="Dates should be in the range 2019-01-01 upto 2022-04-24" value="" min="2019-01-01" max="2022-04-24" required>
           </div>
         </div>
-        <button type="button" class="btn btn-outline-info pdt_btn">Add Product</button>
+        <input class="btn btn-outline-info pdt_btn" type="submit" value="Add Product">
+        <!-- <button type="button" class="btn btn-outline-info pdt_btn">Add Product</button> -->
         <button type="button" class="btn btn-outline-warning pdt_btn">Cancel</button>
         <button type="button" class="btn btn-outline-primary pdt_btn">Reset</button>
       </form>
     </div>
   </main>
 </body>
-
+<script src="dist/js/bootstrap.min.js"></script>
 </html>
