--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<li><a href="lab2/aboutme.html">Lab02 - About Me</a></li>
 				<li><a href="lab2/recipe.html">Lab02 - Recipe</a></li>
 				<li><a href="lab3/tmnt.html">Lab03 - Movie Review</a></li>
-				<li><a href="lab05.html">Lab05</a></li>
+				<li><a href="lab4/product.html">Lab04 -Regular Expressions</a></li>
 				<li><a href="lab06.html">Lab06</a></li>
 				<li><a href="lab07.html">Lab07</a></li>
 				<li><a href="lab08.html">Lab08</a></li>
