--- a/lab5/lab4/supplier.html
+++ b/lab5/lab4/supplier.html
@@ -65,7 +65,7 @@
 
           <div class="row">
             <div class="col-md-12 mb-12 mt-5">
-              <label for="url">Website URL</label>
+              <label for="webiste">Website URL</label>
               <input type="text" class="form-control" id="url" placeholder="Enter Website URL" value="" 
               required pattern="https?://.+" title="URL must start with http:// or https://">
             </div>
@@ -83,10 +83,11 @@
               </div>
             </div>
           </div>
-          <input class="btn btn-primary login_btn" type="submit" value="Submit">
+          <input class="btn btn-primary login_btn" type="submit" value="Submit" onclick="printToConsole()">
         </form>
     </div>
   </main>
 </body>
 <script src="dist/js/bootstrap.min.js"></script>
+<script src="dist/js/login.js"></script>
 </html>
