Lab 5 solutions no. 11 && 12

--- a/lab5/lab4/supplier.html
+++ b/lab5/lab4/supplier.html
@@ -89,5 +89,5 @@
   </main>
 </body>
 <script src="dist/js/bootstrap.min.js"></script>
-<script src="dist/js/login.js"></script>
+<script src="dist/js/app.js"></script>
 </html>
