--- a/lab5/lab4/product.html
+++ b/lab5/lab4/product.html
@@ -64,7 +64,7 @@
           <div class="col-md-6 mb-3">
             <label for="quantity">Quantity In Stock</label>
             <input type="number" class="form-control" id="quantity" placeholder="Quantity In Stock" 
-            title="Only digits allowed as quantity" value="0" required pattern="\d+">
+            title="Only digits allowed as quantity" placeholder="0" required pattern="\d+">
           </div>
         </div>
 
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="unitPrice">Unit Price</label>
-            <input type="number" class="form-control" id="unitPrice" placeholder="" value="0.0" 
+            <input type="number" class="form-control" id="unitPrice" placeholder="0.0" value="" 
             title="Only digits allowed as unit price" required pattern="^[-+]?[0-9]*\.?[0-9]+$">
           </div>
           <div class="col-md-6 mb-3">
@@ -98,8 +98,7 @@
             title="Dates should be in the range 2019-01-01 upto 2022-04-24" value="" min="2019-01-01" max="2022-04-24" required>
           </div>
         </div>
-        <input class="btn btn-outline-info pdt_btn" type="submit" value="Add Product">
-        <!-- <button type="button" class="btn btn-outline-info pdt_btn">Add Product</button> -->
+        <input class="btn btn-outline-info pdt_btn" type="submit" value="Add Product" onclick="showPopUp()">
         <button type="button" class="btn btn-outline-warning pdt_btn">Cancel</button>
         <button type="button" class="btn btn-outline-primary pdt_btn">Reset</button>
       </form>
@@ -107,4 +106,5 @@
   </main>
 </body>
 <script src="dist/js/bootstrap.min.js"></script>
+<script src="dist/js/app.js"></script>
 </html>
