--- a/lab5/lab4/product.html
+++ b/lab5/lab4/product.html
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="supplier.html">Suppliers</a>
+            <a class="nav-link" href="login.html">Login</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
