--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Text Decorator</title>
-		<link href="decoratemytext.css" type="text/css" rel="stylesheet" />
+		<link href="css/decoratemytext.css" type="text/css" rel="stylesheet" />
 
 		<!--
 		This is a widely-used JavaScript library named jQuery that has
@@ -19,7 +19,7 @@
 		<h1>Text Decorator</h1>
 		
 		<div>
-			<img src="decorated.gif" alt="very decorated!" />
+			<img src="images/decorated.gif" alt="very decorated!" />
 		</div>
 
 		<!-- Your UI controls go here -->
@@ -36,6 +36,8 @@
 		<div>
 			<fieldset>
 				<legend>Decorator</legend>
+				<button>Bigger Decorations!</button><br/>
+				<input type="checkbox" id="chkbx"/><span>Bling</span>
 			</fieldset>
 		</div>
 		
