--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -12,7 +12,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 
 		<!-- link to your script file here -->
-		
+		<script src="js/decoratemytext.js" type="text/javascript">
+		</script>
 	</head>
 
 	<body>
@@ -36,7 +37,7 @@
 		<div>
 			<fieldset>
 				<legend>Decorator</legend>
-				<button>Bigger Decorations!</button><br/>
+				<button id="biggerDeco">Bigger Decorations!</button><br/>
 				<input type="checkbox" id="chkbx"/><span>Bling</span>
 			</fieldset>
 		</div>
