--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -38,6 +38,8 @@
 			<fieldset>
 				<legend>Decorator</legend>
 				<button id="biggerDeco">Bigger Decorations!</button><br/>
+				<button id="pigLatin">Igpay Atinlay</button><br/>
+				<button id="malkovitch">Malkovitch</button><br/>
 				<input type="checkbox" id="chkbx"/><span>Bling</span>
 			</fieldset>
 		</div>
