--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 				<li><a href="lab2/recipe.html">Lab02 - Recipe</a></li>
 				<li><a href="lab3/tmnt.html">Lab03 - Movie Review</a></li>
 				<li><a href="lab4/product.html">Lab04 -Regular Expressions</a></li>
-				<li><a href="lab06.html">Lab06</a></li>
-				<li><a href="lab07.html">Lab07</a></li>
+				<li><a href="lab5/product.html">Lab05 - </a></li>
+				<li><a href="lab6/decoratemytext.html">Lab06</a></li>
 				<li><a href="lab08.html">Lab08</a></li>
 				<li><a href="lab09.html">Lab09</a></li>
 				<li><a href="lab10.html">Lab10</a></li>
