--- a/lab6/decoratemytext.html
+++ b/lab6/decoratemytext.html
@@ -44,5 +44,13 @@
 			</fieldset>
 		</div>
 		
+		<div class="validator_div">
+			<a class="validator" href="http://validator.w3.org/check/referer"><img src="images/w3c-html.png"
+					alt="Valid HTML5"></a> <br>
+			<a class="validator" href="http://jigsaw.w3.org/css-validator/check/referer"><img src="images/w3c-css.png"
+					alt="Valid CSS"></a> <br>
+			<a class="validator" href="http://codebeautify.org/jsvalidate"><img src="images/w3c-xhtml.png"
+				 	alt="Valid JS"></a>
+		</div>
 	</body>
 </html>
