--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 				<li><a href="lab4/product.html">Lab04 -Regular Expressions</a></li>
 				<li><a href="lab5/product.html">Lab05 - JS Intro</a></li>
 				<li><a href="lab6/decoratemytext.html">Lab06 - JS Environment</a></li>
-				<li><a href="lab08.html">Lab08</a></li>
-				<li><a href="lab09.html">Lab09</a></li>
+				<li><a href="lab9/lab4/product.html">Lab09 - JQuery</a></li>
 				<li><a href="lab10.html">Lab10</a></li>
 				<li><a href="final.html">Final Exam</a></li>
 			</ul>
