--- a/lab15/index.html
+++ b/lab15/index.html
@@ -7,6 +7,7 @@
    
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-nl8CRcNYOGaXP68QRJeVTXCWAhwqBhRha0QbuubX1qDQpGT3GgclpvyzkR2JzyfZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.css">
+    <link type="text/css" rel="shortcut icon" href="images/favicon.ico"/>
    
     <script defer src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -53,7 +54,6 @@
             <section>
                 <div class="row" style="margin-top: 18px;">
                     <div class="col-md-12  m-t-10">
-                        <h5>About Us</h5>
                         <article>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, odit vero expedita quam veniam sed dignissimos, consectetur libero autem sequi reiciendis maiores ullam est aliquid exercitationem, nemo iure corrupti voluptas laudantium? Eaque voluptate ipsam voluptatum, delectus vel quas expedita quisquam aut! Quae autem illum rerum repellendus temporibus,</p>
                             <p>Ex deserunt necessitatibus nobis voluptate quos quibusdam velit, beatae quis maiores earum libero in voluptatum possimus optio temporibus cumque quaerat pariatur ipsa laboriosam! Fuga, quaerat error? Eum debitis ex ea illo quidem officia nam molestias? In fugiat aliquid dolore iure accusantium!</p>
