--- a/lab15/books.html
+++ b/lab15/books.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HolyCross Medical Center</title>
+    <title>The eLibrary</title>
    
     <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/spacelab/bootstrap.min.css" rel="stylesheet" integrity="sha384-nl8CRcNYOGaXP68QRJeVTXCWAhwqBhRha0QbuubX1qDQpGT3GgclpvyzkR2JzyfZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.css">
+    <link type="text/css" rel="shortcut icon" href="images/favicon.ico"/>
    
     <script defer src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script defer src="js/app.js"></script>
 </head>
 <body>
     <header>
         <!-- Start Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark nav_header">
-            <a style="padding-right: 2em;" class="navbar-brand" href="#">HolyCross Medical Center</a>
+            <a style="padding-right: 2em;" class="navbar-brand" href="#">The eLibrary ::: a CS318 Demo  WebApp Project</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
                     aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,14 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active" style="border-left: white 1px solid; padding-left: 2em; padding-right: 2em;">
-                        <a class="nav-link" href="index.html">Home</a>
+                    <li class="nav-item nav_style">
+                        <a class="nav-link" href="index.html">About Us</a>
                     </li>
-                    <li class="nav-item" style="border-left: white 1px solid; padding-left: 2em; padding-right: 2em;">
-                        <a class="nav-link" href="patient-form.html">Patients</a>
+                    <li class="nav-item nav_style">
+                        <a class="nav-link" href="#">Virtual Tour</a>
+                    </li>
+                    <li class="nav-item nav_style active">
+                        <a class="nav-link" href="books.html">Books</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -41,116 +44,56 @@
 
     <!-- Start main-content -->
     <main>
-        <div style="padding-top: 1em;" class="container">
-            <h3>Patient Registration</h3>
-            <hr>
+        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" style="display: none;" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header modal_style">
+                  <h4 class="modal-title" id="myLargeModalLabel">Add New Book</h4>
 
-            <form id="patientsForm" method="post">
-                <fieldset>
-                    <legend></legend>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <label for="patientNo">*Patient ID No:</label>
-                                <input class="form-control" pattern="E?P-[0-9]{3}-[0-9]{6}" type="text" name="patientNo" id="patientNo" placeholder="EP-XXX-XXXXXX" required autofocus>
-                                <small class="form-text text-muted">Enter the Patient ID Number in the specified format</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label for="firstName">*First Name:</label>
-                                <input class="form-control" pattern="[A-Za-z]+" type="text" name="firstName" id="firstName" placeholder="Enter First Name" required>
-                                <small class="form-text text-muted">Enter the Patient's First Name</small>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label for="middleName">Middle Initial(s):</label>
-                                <input class="form-control" pattern="[A-Za-z]+" type="text" name="middleName" id="middleName" placeholder="Enter Middle Initial(s)">
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label for="lastName">*Last Name:</label>
-                                <input class="form-control" pattern="[A-Za-z]+" type="text" name="lastName" id="lastName" placeholder="Enter Last Name" required>
-                                <small class="form-text text-muted">Enter the Patient's Last Name</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label for="dob">*Date of Birth:</label>
-                                <input  class="form-control" type="date" name="dob" id="dob" placeholder="mm/dd/yyyy" required>
-                                <small class="form-text text-muted">Enter the Patient's Date of Birth</small>
-                            </div>
-                        </div>
-
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label for="ddlState">*Department:</label>
-                                <select required class="form-control" id="department" name="department">
-                                    <option value="">Select...</option>
-                                    <option value="Cardiology">Cardiology</option>
-                                    <option value="Ear, Nose and Throat">Ear, Nose and Throat</option>
-                                    <option value="Primary Care">Primary Care</option>
-                                    <option value="Unassigned">Unassigned</option>
-                                </select>
-                                <small class="form-text text-muted">Select department providing care</small>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <label>*Is this an Out-Patient ?</label><br>
-                            <div class="form-group">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input required type="radio" name="radioOutPatient" id="radioradioOutPatientYes" class="custom-control-input" value="Yes">
-                                    <label for="radioradioOutPatientYes" class="custom-control-label">Yes</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input required type="radio" name="radioOutPatient" id="radioradioOutPatientNo" class="custom-control-input" value="No">
-                                    <label for="radioradioOutPatientNo" class="custom-control-label">No</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <hr>
                     <div class="row">
                         <div class="col-md-6">
                             &nbsp;
                         </div>
                         <div style="text-align: right;" class="col-md-6">
-                            <button style="padding: .5em 4em;" id="btnReset" type="reset" class="btn btn-secondary btn-inline">Reset</button>
-                            <button style="margin-left: 1em; padding: .5em 4em;" id="btnSubmit" type="submit" class="btn btn-primary btn-inline submit_btn">Register Patient</button>
+                            <button id="btnReset" type="reset" class="btn btn-secondary btn-inline">Reset</button>
+                            <button style="margin-left: 1em;" id="btnSubmit" type="submit" class="btn btn-primary btn-inline">Save Book</button>
                         </div>
                     </div>
-                </fieldset>
-            </form>
+                </div>
+              </div>
+            </div>
+        </div>
 
-            <div class="row" style="padding-left: 14px;">
-                <div class="custom-control custom-checkbox col-md-5">
-                    <input type="checkbox" class="custom-control-input" id="elderlyPatients">
-                    <label class="custom-control-label" for="elderlyPatients">Show Elderly Patients only</label>
+        <div style="padding-top: 1em;" class="container">
+            <div class="row">
+                <div class="col-md-10">
+                    <h3>Books in our Collection</h3>
                 </div>
                 
-                <div class="custom-control custom-checkbox col-md-5">
-                    <input type="checkbox" class="custom-control-input" id="outPatientsOnly">
-                    <label class="custom-control-label" for="outPatientsOnly">Show Output Patients only</label>
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target=".bd-example-modal-lg">Add New Book</button>
                 </div>
             </div>
+
+            <hr>
 
             <div style="margin-top: 1em;" id="divPatientList" style="font-size: 1em">  
                            
                 <table class="table table-striped m-t-10">
-                    <thead>
+                    <thead class="table_header">
                         <tr>
-                            <th scope="col">Patient ID No</th>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Middle Name Initial(s)</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Date Of Birth</th>
-                            <th scope="col">Department</th>
-                            <th scope="col">OutPatient?</th>
+                            <th scope="col">#</th>
+                            <th scope="col">ISBN</th>
+                            <th scope="col">Book Title</th>
+                            <th scope="col">Overdue Fees</th>
+                            <th scope="col">Publisher</th>
+                            <th scope="col">Date Published</th>
                         </tr>
                     </thead>
                     <tbody id="tbodyPatientsList"></tbody>
